--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -11,7 +11,7 @@
 	background: lightskyblue;
 }
 
-#game-steps {
+#game-plies {
 	float: right;
 	padding: 10px;
 	margin: 5px;
@@ -19,15 +19,15 @@
 	border: 2px solid black;
 }
 
-.list-element-ply, .list-element-ply-alternative {
-	display: inline-block;
+.ply {
+	/*display: inline-block;*/
 	margin-right: 3px;
 	margin-left: 3px;
 	background: powderblue;
 }
 
-.list-element-ply:hover, .list-element-ply-alternative:hover  {
-	opacity: 0.8;
+.ply:hover  {
+	opacity: 0.7;
 }
 
 .list-element-ply-alternative {
